--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "highlight.js": "^11.0.1",
+    "marked": "^2.1.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.9"
   },
