--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.1.1",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0",
+    "@toast-ui/editor-plugin-color-syntax": "^3.0.2",
+    "@toast-ui/editor-plugin-table-merged-cell": "^3.0.1",
+    "ant-design-vue": "^2.2.8",
     "axios": "^0.21.1",
-    "highlight.js": "^11.0.1",
-    "marked": "^2.1.1",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.9"
+    "prismjs": "^1.25.0",
+    "vue": "^3.2.4",
+    "vue-router": "^4.0.9",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
